--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
   </footer>
 <a href="booking.html">Booking</a>
 <a href="userBookings.html">My Bookings</a>
+  <a href="userBookings.html">My Bookings</a>
+
 
 </body>
 </html>
