--- a/userBookings.html
+++ b/userBookings.html
@@ -1,105 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Bookings</title>
-    <link rel="stylesheet" href="./lawyer.css">
-    <link rel="icon" type="image/x-icon" href="./logo/LegalAssist.png">
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <script src="https://kit.fontawesome.com/5598f0038c.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <title>My Bookings</title>
 </head>
-<link rel="stylesheet" href="./userBooking.css">
-<link rel="stylesheet" href="./navbar.css">
-
 <body>
-    <div class="navbar">
-        <div class="right-nav">
-          <a href="./HomePage.html"><img width="50" src="LegalAssist-Transparent.png" alt="" /></a>
-          <h4>Legal Assist</h4>
-        </div>
-        <div class="nav">
-          <a href="./HomePage.html">
-            <p>Home</p>
-          </a>
-          <p></p>
-          <a href="./lawyer.html">
-            <p>Find A Lawyer</p>
-          </a>
-          <p></p>
-          <a href="./userBooking.html">
-            <p>My Bookings</p>
-          </a>
-          <p></p>
-          <p>
-            <i class="fa-regular fa-user" style="color: #d043b6"></i>&nbsp;&nbsp;<span id="profile">Profile</span>
-          </p>
-          <p></p>
-          <div id="signup-logout-btn">
-          </div>
-          <div id="space"></div>
-        </div>
-      </div>
-    <h1>My Bookings</h1>
-    <div id="bookingList">Loading...</div>
+  <h2>My Booked Appointments</h2>
+  <ul id="bookingsList"></ul>
+
+  <script>
+    const bookings = JSON.parse(localStorage.getItem('bookings')) || [];
+    const bookingsList = document.getElementById('bookingsList');
+
+    if (bookings.length === 0) {
+      bookingsList.innerHTML = "<li>No bookings found.</li>";
+    } else {
+      bookings.forEach(b => {
+        const li = document.createElement('li');
+        li.textContent = `Name: ${b.name}, Date: ${b.date}`;
+        bookingsList.appendChild(li);
+      });
+    }
+  </script>
 </body>
-
 </html>
-<script src="./userBooking.js"></script>
-<script src="./Homepage.js"></script><!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Bookings</title>
-    <link rel="stylesheet" href="./lawyer.css">
-    <link rel="icon" type="image/x-icon" href="./logo/LegalAssist.png">
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <script src="https://kit.fontawesome.com/5598f0038c.js" crossorigin="anonymous"></script>
-</head>
-<link rel="stylesheet" href="./userBooking.css">
-<link rel="stylesheet" href="./navbar.css">
-
-<body>
-    <div class="navbar">
-        <div class="right-nav">
-          <a href="./HomePage.html"><img width="50" src="LegalAssist-Transparent.png" alt="" /></a>
-          <h4>Legal Assist</h4>
-        </div>
-        <div class="nav">
-          <a href="./HomePage.html">
-            <p>Home</p>
-          </a>
-          <p></p>
-          <a href="./lawyer.html">
-            <p>Find A Lawyer</p>
-          </a>
-          <p></p>
-          <a href="./userBooking.html">
-            <p>My Bookings</p>
-          </a>
-          <p></p>
-          <p>
-            <i class="fa-regular fa-user" style="color: #d043b6"></i>&nbsp;&nbsp;<span id="profile">Profile</span>
-          </p>
-          <p></p>
-          <div id="signup-logout-btn">
-          </div>
-          <div id="space"></div>
-        </div>
-      </div>
-    <h1>My Bookings</h1>
-    <div id="bookingList">Loading...</div>
-</body>
-
-</html>
-<script src="./userBooking.js"></script>
-<script src="./Homepage.js"></script>
