--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
     © 2025 LegalConnect. All rights reserved.
   </footer>
 <a href="booking.html">Booking</a>
-<a href="userBookings.html">My Bookings</a>
+<a href="userBooking.html">My Bookings</a>
 </body>
 </html>
