--- a/lawyer.html
+++ b/lawyer.html
@@ -304,7 +304,7 @@
 
     displayLawyers(lawyers); // Initial load
   </script>
-  <a href="booking.html">Lawyer</a>
+  <a href="userBooking.html">Lawyer</a>
 
 </body>
 </html>
