--- a/booking.html
+++ b/booking.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Book Appointment - LegalConnect</title>
+  <title>Find a Lawyer - LegalConnect</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background-color: #f2f2f2;
+      background-color: #f8f9fa;
     }
 
     header {
@@ -19,48 +19,33 @@
     }
 
     .container {
-      max-width: 600px;
-      margin: 3rem auto;
-      background-color: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 1rem;
     }
 
-    h2 {
-      text-align: center;
+    .lawyer-card {
+      background-color: white;
+      margin-bottom: 1.5rem;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .lawyer-card h3 {
+      margin: 0 0 0.5rem;
       color: #0d6efd;
     }
 
-    label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: 600;
-    }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 0.8rem;
-      margin-top: 0.5rem;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-
-    textarea {
-      resize: vertical;
-    }
-
     .btn {
-      margin-top: 2rem;
+      display: inline-block;
+      margin-top: 1rem;
       background-color: #0d6efd;
       color: white;
-      border: none;
-      padding: 1rem;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 100%;
+      padding: 0.8rem 1.2rem;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
     }
 
     .btn:hover {
@@ -70,7 +55,7 @@
     footer {
       text-align: center;
       padding: 1rem;
-      margin-top: 3rem;
+      margin-top: 2rem;
       background-color: #343a40;
       color: white;
     }
@@ -79,38 +64,28 @@
 <body>
 
   <header>
-    <h1>LegalConnect</h1>
-    <p>Book Your Legal Appointment</p>
+    <h1>Find a Lawyer</h1>
+    <p>Select a professional to help with your legal needs</p>
   </header>
 
   <div class="container">
-    <h2>Appointment Booking Form</h2>
-    <form action="#" method="POST">
-      <label for="name">Full Name</label>
-      <input type="text" id="name" name="name" placeholder="Your full name" required>
+    <div class="lawyer-card">
+      <h3>John Doe</h3>
+      <p>Expert in Family Law with 10+ years of experience handling complex domestic issues and child custody cases.</p>
+      <a href="booking.html" class="btn">Book Now</a>
+    </div>
 
-      <label for="email">Email Address</label>
-      <input type="email" id="email" name="email" placeholder="example@email.com" required>
+    <div class="lawyer-card">
+      <h3>Jane Smith</h3>
+      <p>Corporate law specialist focused on business contracts, mergers, and compliance for startups and enterprises.</p>
+      <a href="booking.html" class="btn">Book Now</a>
+    </div>
 
-      <label for="phone">Phone Number</label>
-      <input type="tel" id="phone" name="phone" placeholder="9876543210" required>
-
-      <label for="lawyer">Select Lawyer</label>
-      <select id="lawyer" name="lawyer" required>
-        <option value="">-- Select a Lawyer --</option>
-        <option value="John Doe">John Doe</option>
-        <option value="Jane Smith">Jane Smith</option>
-        <option value="Rahul Sharma">Rahul Sharma</option>
-      </select>
-
-      <label for="date">Preferred Date</label>
-      <input type="date" id="date" name="date" required>
-
-      <label for="message">Case Details / Message</label>
-      <textarea id="message" name="message" rows="4" placeholder="Brief about your case..." required></textarea>
-
-      <button type="submit" class="btn">Book Appointment</button>
-    </form>
+    <div class="lawyer-card">
+      <h3>Rahul Sharma</h3>
+      <p>Criminal defense attorney skilled in trial advocacy and representing clients in complex criminal matters.</p>
+      <a href="booking.html" class="btn">Book Now</a>
+    </div>
   </div>
 
   <footer>
