--- a/booking.html
+++ b/booking.html
@@ -91,6 +91,6 @@
   <footer>
     © 2025 LegalConnect. All rights reserved.
   </footer>
-
+  <a href="booking.html" class="btn">Book Appointment</a>
 </body>
 </html>
