--- a/booking.html
+++ b/booking.html
@@ -46,6 +46,8 @@
       text-decoration: none;
       border-radius: 6px;
       font-weight: bold;
+      cursor: pointer;
+      border: none;
     }
 
     .btn:hover {
@@ -68,6 +70,24 @@
       border-radius: 8px;
       font-weight: bold;
     }
+
+    #booking-form {
+      background-color: white;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      display: none;
+      margin-top: 2rem;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.5rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
@@ -83,22 +103,42 @@
     <div class="lawyer-card">
       <h3>John Doe</h3>
       <p>Expert in Family Law with 10+ years of experience handling complex domestic issues and child custody cases.</p>
-      <a href="booking.html?lawyer=John%20Doe" class="btn">Book Now</a>
+      <a href="?lawyer=John%20Doe" class="btn">Book Now</a>
     </div>
 
     <div class="lawyer-card">
       <h3>Jane Smith</h3>
       <p>Corporate law specialist focused on business contracts, mergers, and compliance for startups and enterprises.</p>
-      <a href="booking.html?lawyer=Jane%20Smith" class="btn">Book Now</a>
+      <a href="?lawyer=Jane%20Smith" class="btn">Book Now</a>
     </div>
 
     <div class="lawyer-card">
       <h3>Rahul Sharma</h3>
       <p>Criminal defense attorney skilled in trial advocacy and representing clients in complex criminal matters.</p>
-      <a href="booking.html?lawyer=Rahul%20Sharma" class="btn">Book Now</a>
+      <a href="?lawyer=Rahul%20Sharma" class="btn">Book Now</a>
     </div>
 
-    <a href="booking.html" class="btn">Book Appointment</a>
+    <button id="show-form" class="btn">Book Appointment</button>
+
+    <div id="booking-form">
+      <h2>Book an Appointment</h2>
+      <form>
+        <label for="name">Your Name:</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="lawyer">Select Lawyer:</label>
+        <select id="lawyer" name="lawyer">
+          <option value="John Doe">John Doe</option>
+          <option value="Jane Smith">Jane Smith</option>
+          <option value="Rahul Sharma">Rahul Sharma</option>
+        </select>
+
+        <label for="date">Preferred Date:</label>
+        <input type="date" id="date" name="date" required>
+
+        <button type="submit" class="btn">Submit</button>
+      </form>
+    </div>
   </div>
 
   <footer>
@@ -109,8 +149,14 @@
     const params = new URLSearchParams(window.location.search);
     const lawyerName = params.get("lawyer");
     if (lawyerName) {
-      document.getElementById("booking-message").innerHTML = `<div class="booking-header">Booking for <strong>${decodeURIComponent(lawyerName)}</strong></div>`;
+      document.getElementById("booking-message").innerHTML =
+        `<div class="booking-header">Booking for <strong>${decodeURIComponent(lawyerName)}</strong></div>`;
     }
+
+    document.getElementById("show-form").addEventListener("click", function () {
+      const form = document.getElementById("booking-form");
+      form.style.display = form.style.display === "none" ? "block" : "none";
+    });
   </script>
 
 </body>
