--- a/booking.html
+++ b/booking.html
@@ -184,9 +184,13 @@
       this.reset();
     });
   </script>
-const params = new URLSearchParams(window.location.search);
-const lawyer = params.get("lawyer");
-console.log("Selected Lawyer:", lawyer);
+<script>
+  const lawyer = JSON.parse(localStorage.getItem("selectedLawyer"));
+  if (lawyer) {
+    document.getElementById("lawyerName").textContent = lawyer.name;
+    // and so on...
+  }
+</script>
 
 </body>
 </html>
