--- a/booking.html
+++ b/booking.html
@@ -108,7 +108,7 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="#">Find Lawyer</a>
+  <a href="lawyers.html">Find Lawyer</a>
   </nav>
 
   <div class="container">
