--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
   <header>
     <h1>LegalConnect</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Lawyers</a>
+      <a href="index.html">Home</a>
+      <a href="lawyer.html">Lawyers</a>
       <a href="#about">About</a>
-      <a href="#">Help</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
