--- a/lawyer.html
+++ b/lawyer.html
@@ -183,9 +183,9 @@
       <h4>Legal Assist</h4>
     </div>
     <div class="nav">
-      <a href="./HomePage.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="./lawyer.html">Find A Lawyer</a>
-      <a href="./userBooking.html">My Bookings</a>
+      <a href="booking.html">My Bookings</a>
       <p><i class="fa-regular fa-user" style="color: #d043b6"></i> <span id="profile">Profile</span></p>
       <div id="signup-logout-btn"></div>
     </div>
