--- a/lawyer.html
+++ b/lawyer.html
@@ -179,15 +179,14 @@
 <body>
   <div class="navbar">
     <div class="right-nav">
-      <a href="./HomePage.html"><img width="50" src="LegalAssist-Transparent.png" alt="logo" /></a>
+      <a href="./index.html"><img width="50" src="LegalAssist-Transparent.png" alt="logo" /></a>
       <h4>Legal Assist</h4>
     </div>
     <div class="nav">
-      <a href="index.html">Home</a>
+      <a href="./index.html">Home</a>
       <a href="./lawyer.html">Find A Lawyer</a>
-      <a href="booking.html">My Bookings</a>
+      <a href="booking.html">MY BOOKINGS</a>
       <p><i class="fa-regular fa-user" style="color: #d043b6"></i> <span id="profile">Profile</span></p>
-      <div id="signup-logout-btn"></div>
     </div>
   </div>
 
