--- a/lawyer.html
+++ b/lawyer.html
@@ -179,8 +179,7 @@
 <body>
   <div class="navbar">
     <div class="right-nav">
-      <a href="./index.html"><img width="50" src="LegalAssist-Transparent.png" alt="logo" /></a>
-      <h4>Legal Assist</h4>
+      <h2>LegalConnect</h2>
     </div>
     <div class="nav">
       <a href="./index.html">Home</a>
